Fixed include path in src/gui/Makefile.am, make distcheck works now

--- a/src/gui/Makefile.am
+++ b/src/gui/Makefile.am
@@ -1,4 +1,4 @@
-AM_CPPFLAGS = @LIBGLADEMM_CFLAGS@ @LIBXMLPP_CFLAGS@ @JACK_CFLAGS@ @LASH_CFLAGS@ @DEBUG_CFLAGS@ -I../libdinoseq -DDATA_DIR=\"$(pkgdatadir)\"
+AM_CPPFLAGS = @LIBGLADEMM_CFLAGS@ @LIBXMLPP_CFLAGS@ @JACK_CFLAGS@ @LASH_CFLAGS@ @DEBUG_CFLAGS@ -I"$(top_srcdir)/src/libdinoseq" -DDATA_DIR=\"$(pkgdatadir)\"
 
 bin_PROGRAMS = dino
 
